--- a/css/base.css
+++ b/css/base.css
@@ -1,63 +1,85 @@
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 :focus {
-  outline: none; }
+  outline: none;
+}
 
 html {
   height: 100%;
   tab-size: 4;
   font-size: 14px;
   line-height: 28px;
-  -webkit-text-size-adjust: none; }
+  -webkit-text-size-adjust: none;
+}
 
 body {
   position: relative;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 a {
   color: inherit;
   text-decoration: none;
-  cursor: pointer; }
-  a:hover {
-    text-decoration: underline; }
+  cursor: pointer;
+}
+a:hover {
+  text-decoration: underline;
+}
 
 ul {
-  list-style-type: none; }
+  list-style-type: none;
+}
 
 hr {
   height: 1px;
-  border: none; }
+  border: none;
+}
 
 img, iframe {
-  border: none; }
+  border: none;
+}
 
 input, select, button, textarea, table, optgroup, pre {
   font-size: inherit;
   font-family: inherit;
-  color: inherit; }
+  color: inherit;
+}
 
 input, select, button, textarea, label, img, svg {
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 input, select, button, textarea {
-  border-radius: 0; }
+  border-radius: 0;
+}
 
 button {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 [disabled] {
   opacity: 0.4;
   cursor: not-allowed !important;
-  pointer-events: none; }
-  [disabled] [disabled] {
-    opacity: 1; }
+  pointer-events: none;
+}
+[disabled] [disabled] {
+  opacity: 1;
+}
 
 [hidden] {
-  display: none !important; }
+  display: none !important;
+}
+
+::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
