--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -2,73 +2,98 @@
   position: relative;
   height: 400px;
   background: #6e90ee url("../img/banner.jpg") center top/cover;
-  overflow: hidden; }
-  .banner h1 {
-    position: relative;
-    color: #fff;
-    text-align: center;
-    line-height: 58px;
-    font-size: 28px;
-    margin-top: 102px; }
-    .banner h1::before {
-      content: '';
-      display: inline-block;
-      vertical-align: top;
-      margin-top: -5px;
-      margin-right: 10px;
-      width: 63px;
-      height: 58px;
-      background: url("../img/logo.svg"); }
-  .banner h2 {
-    text-align: center;
-    color: #fff;
-    font-size: 60px;
-    line-height: 60px;
-    margin-top: 43px; }
-  .banner h3 {
-    text-align: center;
-    color: #fff;
-    opacity: 0.8;
-    font-size: 28px;
-    line-height: 28px;
-    margin-top: 20px; }
+  overflow: hidden;
+}
+.banner h1 {
+  position: relative;
+  color: #fff;
+  text-align: center;
+  line-height: 58px;
+  font-size: 28px;
+  margin-top: 102px;
+}
+.banner h1::before {
+  content: "";
+  display: inline-block;
+  vertical-align: top;
+  margin-top: -5px;
+  margin-right: 10px;
+  margin-left: -5px;
+  width: 63px;
+  height: 58px;
+  background: url("../img/logo.svg");
+}
+.banner h2 {
+  text-align: center;
+  color: #fff;
+  font-size: 4em;
+  font-weight: 100;
+  line-height: 60px;
+  margin-top: 43px;
+}
+.banner h3 {
+  text-align: center;
+  color: #fff;
+  opacity: 0.8;
+  font-size: 2em;
+  font-weight: 400;
+  line-height: 28px;
+  margin-top: 20px;
+}
 
-flit-preview {
+.preview {
   display: block;
-  padding-bottom: 40px; }
-  flit-preview .wrapper {
-    width: 1110px;
-    max-width: 96%;
-    margin: 0 auto; }
-  flit-preview section {
-    margin: 32px 0; }
-  flit-preview h2 {
-    margin: 48px 0 32px 0; }
-  flit-preview h3 {
-    margin: 40px 0 16px 0; }
-  flit-preview h4 {
-    margin: 16px 0 8px 0; }
-  flit-preview header {
-    opacity: 0.75; }
+  padding-bottom: 40px;
+}
+.preview .wrapper {
+  width: 1110px;
+  max-width: 96%;
+  margin: 0 auto;
+}
+.preview section {
+  margin: 32px 0;
+}
+.preview h2 {
+  font-size: 2.5em;
+  line-height: 1.2;
+  font-weight: 100;
+  margin: 48px 0 32px 0;
+}
+.preview h3 {
+  margin: 40px 0 16px 0;
+}
+.preview h4 {
+  margin: 16px 0 8px 0;
+}
+.preview header {
+  opacity: 0.75;
+}
 
 .theme > div {
-  display: flex; }
+  display: flex;
+}
 
 .theme > div > span {
   width: 150px;
   text-align: right;
-  padding-right: 10px; }
+  padding-right: 10px;
+}
 
-f-radio {
-  margin-right: 10px; }
+.radio {
+  margin-right: 10px;
+  min-width: 5em;
+}
 
-f-checkbox {
-  margin-right: 10px; }
+.checkbox {
+  margin-right: 10px;
+}
 
 .row {
   display: flex;
-  margin: 10px; }
+  margin: 10px;
+}
 
 .row > div {
   flex: 1;
-  padding: 0 10px; }
+  padding: 0 10px;
+}
