--- a/docs/css/docs.scss
+++ b/docs/css/docs.scss
@@ -49,6 +49,7 @@
 .preview{
 	display: block;
 	padding-bottom: 40px;
+	overflow: hidden;
 
 	.wrapper{
 		width: 1110px;
@@ -61,14 +62,16 @@
 	}
 
 	h2{
-		font-size: 2.5em;
+		font-size: 2.56em;
 		line-height: 1.2;
 		font-weight: 100;
 		margin: 48px 0 32px 0;
 	}
 
 	h3{
-		margin: 40px 0 16px 0;
+		font-size: 1.86em;
+		font-weight: 400;
+		margin: 30px 0 16px 0;
 	}
 
 	h4{
@@ -77,6 +80,7 @@
 
 	header{
 		opacity: 0.75;
+		padding: 3px 0;
 	}
 }
 
@@ -106,6 +110,5 @@
 }
 
 .row > div{
-	flex: 1;
 	padding: 0 10px;
 }
