--- a/docs/css/docs.scss
+++ b/docs/css/docs.scss
@@ -98,10 +98,16 @@
 .radio{
 	margin-right: 10px;
 	min-width: 5em;
+	padding: 0.2em 0;
 }
 
 .checkbox{
 	margin-right: 10px;
+	padding: 0.2em 0;
+}
+
+.switch{
+	margin: 0.2em 0;
 }
 
 .row{
