--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -80,8 +80,8 @@ table {
 }
 
 ::-webkit-scrollbar {
-  height: 10px;
-  width: 10px;
+  height: 8px;
+  width: 8px;
   background: #e6e6e6;
 }
 
@@ -95,4 +95,11 @@ table {
 
 ::-webkit-scrollbar-thumb:active {
   background: #787878;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #c1c1c1 #e6e6e6;
+  }
 }
