--- a/docs/css/base.scss
+++ b/docs/css/base.scss
@@ -88,8 +88,8 @@ table{
 }
 
 ::-webkit-scrollbar{
-	height: 10px;
-	width: 10px;
+	height: 8px;
+	width: 8px;
 	background: #e6e6e6;
 }
 
@@ -103,4 +103,11 @@ table{
 
 ::-webkit-scrollbar-thumb:active{
 	background: #787878;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+	*{
+		scrollbar-width: thin;
+		scrollbar-color: #c1c1c1 #e6e6e6;
+	}
 }
