--- a/css/base.css
+++ b/css/base.css
@@ -1,85 +1,87 @@
-*, *::before, *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+*, *::before, *::after{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-:focus {
-  outline: none;
+:focus{
+	outline: none;
 }
 
-html {
-  height: 100%;
-  tab-size: 4;
-  font-size: 14px;
-  line-height: 28px;
-  -webkit-text-size-adjust: none;
+html{
+	height: 100%;
+	tab-size: 4;
+	font-size: 14px;
+	line-height: 28px;
+	-webkit-text-size-adjust: none;
 }
 
-body {
-  position: relative;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+body{
+	-webkit-tap-highlight-color: rgba(#000, 0);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-a:hover {
-  text-decoration: underline;
+a{
+	color: inherit;
+	text-decoration: none;
+	cursor: pointer;
+
+	&:hover{
+		text-decoration: underline;
+	}
 }
 
-ul {
-  list-style-type: none;
+ul{
+	list-style-type: none;
 }
 
-hr {
-  height: 1px;
-  border: none;
+hr{
+	height: 1px;
+	border: none;
 }
 
-img, iframe {
-  border: none;
+img, iframe{
+	border: none;
 }
 
-input, select, button, textarea, table, optgroup, pre {
-  font-size: inherit;
-  font-family: inherit;
-  color: inherit;
+input, select, button, textarea, table, optgroup, pre{
+	font-size: inherit;
+	font-family: inherit;
+	color: inherit
 }
 
-input, select, button, textarea, label, img, svg {
-  vertical-align: top;
+input, select, button, textarea, label, img, svg{
+	vertical-align: top;
 }
 
-input, select, button, textarea {
-  border-radius: 0;
+/* For ios safari. */
+input, select, button, textarea{
+	border-radius: 0;
 }
 
-button {
-  cursor: pointer;
+button{
+	cursor: pointer;
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+table{
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-[disabled] {
-  opacity: 0.4;
-  cursor: not-allowed !important;
-  pointer-events: none;
-}
-[disabled] [disabled] {
-  opacity: 1;
+[disabled]{
+	opacity: 0.4;
+	cursor: not-allowed !important;
+	pointer-events: none;
+
+	& [disabled]{
+		opacity: 1;
+	}
 }
 
-[hidden] {
-  display: none !important;
+[hidden]{
+	display: none !important;
 }
 
-::-webkit-scrollbar {
-  height: 10px;
-  width: 10px;
+::-webkit-scrollbar{
+	height: 10px;
+	width: 10px;
 }
