--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -1,109 +1,121 @@
-.banner {
-  position: relative;
-  height: 400px;
-  background: #6e90ee url("../img/banner.jpg") center top/cover;
-  overflow: hidden;
-}
-.banner h1 {
-  position: relative;
-  color: #fff;
-  text-align: center;
-  line-height: 58px;
-  font-size: 28px;
-  margin-top: 102px;
-}
-.banner h1::before {
-  content: "";
-  display: inline-block;
-  vertical-align: top;
-  margin-top: -5px;
-  margin-right: 10px;
-  margin-left: -5px;
-  width: 63px;
-  height: 58px;
-  background: url("../img/logo.svg");
-}
-.banner h2 {
-  text-align: center;
-  color: #fff;
-  font-size: 4em;
-  font-weight: 100;
-  line-height: 60px;
-  margin-top: 43px;
-}
-.banner h3 {
-  text-align: center;
-  color: #fff;
-  opacity: 0.8;
-  font-size: 2em;
-  font-weight: 400;
-  line-height: 28px;
-  margin-top: 20px;
+.banner{
+	position: relative;
+	height: 400px;
+	background: #6e90ee url('../img/banner.jpg') center top / cover;
+	overflow: hidden;
+
+	h1{
+		position: relative;
+		color: #fff;
+		text-align: center;
+		line-height: 58px;
+		font-size: 28px;
+		margin-top: 102px;
+		
+		&::before{
+			content: '';
+			display: inline-block;
+			vertical-align: top;
+			margin-top: -5px;
+			margin-right: 10px;
+			margin-left: -5px;
+			width: 63px;
+			height: 58px;
+			background: url('../img/logo.svg');
+		}
+	}
+
+	h2{
+		text-align: center;
+		color: #fff;
+		font-size: 4em;
+		font-weight: 100;
+		line-height: 60px;
+		margin-top: 43px;
+	}
+
+	h3{
+		text-align: center;
+		color: #fff;
+		opacity: 0.8;
+		font-size: 2em;
+		font-weight: 400;
+		line-height: 28px;
+		margin-top: 20px;
+	}
 }
 
-.preview {
-  display: block;
-  padding-bottom: 40px;
-  overflow: hidden;
-}
-.preview .wrapper {
-  width: 1110px;
-  max-width: 96%;
-  margin: 0 auto;
-}
-.preview section {
-  margin: 32px 0;
-}
-.preview h2 {
-  font-size: 2.56em;
-  line-height: 1.2;
-  font-weight: 100;
-  margin: 48px 0 32px 0;
-}
-.preview h3 {
-  font-size: 1.86em;
-  font-weight: 400;
-  margin: 30px 0 16px 0;
-}
-.preview h4 {
-  margin: 16px 0 8px 0;
-}
-.preview header {
-  font-weight: 700;
-  opacity: 0.75;
-  padding: 3px 0;
+
+.preview{
+	display: block;
+	padding-bottom: 40px;
+	overflow: hidden;
+
+	.wrapper{
+		width: 1110px;
+		max-width: 96%;
+		margin: 0 auto;
+	}
+
+	section{
+		margin: 32px 0;
+	}
+
+	h2{
+		font-size: 2.56em;
+		line-height: 1.2;
+		font-weight: 100;
+		margin: 48px 0 32px 0;
+	}
+
+	h3{
+		font-size: 1.86em;
+		font-weight: 400;
+		margin: 30px 0 16px 0;
+	}
+
+	h4{
+		margin: 16px 0 8px 0;
+	}
+
+	header{
+		font-weight: 700;
+		opacity: 0.75;
+		padding: 3px 0;
+	}
 }
 
-.theme > div {
-  display: flex;
+
+.theme > div{
+	display: flex;
 }
 
-.theme > div > span {
-  width: 150px;
-  text-align: right;
-  padding-right: 10px;
+.theme > div > span{
+	width: 150px;
+	text-align: right;
+	padding-right: 10px;
 }
 
-.radio {
-  margin-right: 10px;
-  min-width: 5em;
-  padding: 0.2em 0;
+.radio{
+	margin-right: 10px;
+	min-width: 5.5em;
+	padding: 0.2em 0;
 }
 
-.checkbox {
-  margin-right: 10px;
-  padding: 0.2em 0;
+.checkbox{
+	margin-right: 10px;
+	padding: 0.2em 0;
 }
 
-.switch {
-  margin: 0.2em 0;
+.switch{
+	margin: 0.2em 0;
 }
 
-.row {
-  display: flex;
-  margin: 10px;
+.row{
+	display: flex;
+	margin: 10px;
 }
 
-.row > div {
-  padding: 0 10px;
+.row > div{
+	padding: 0 10px;
 }
