--- a/css/font.css
+++ b/css/font.css
@@ -87,6 +87,126 @@
 	src: local('Roboto BlackItalic'), url('fonts/roboto-black-italic.woff2') format('woff2');
 }
 
+
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 100;
+	src: local('RobotoMono Thin'), url('fonts/robotomono-thin.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 100;
+	src: local('RobotoMono ThinItalic'), url('fonts/robotomono-thin-italic.woff2') format('woff2');
+}
+
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 300;
+	src: local('RobotoMono ExtraLight'), url('fonts/robotomono-extra-light.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 300;
+	src: local('RobotoMono ExtraLightItalic'), url('fonts/robotomono-extra-light-italic.woff2') format('woff2');
+}
+
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 300;
+	src: local('RobotoMono Light'), url('fonts/robotomono-light.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 300;
+	src: local('RobotoMono LightItalic'), url('fonts/robotomono-light-italic.woff2') format('woff2');
+}
+
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 400;
+	src: local('RobotoMono'), local('RobotoMono Regular'), url('fonts/robotomono-regular.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 400;
+	src: local('RobotoMono Italic'), local('RobotoMono Regular Italic'), url('fonts/robotomono-regular-italic.woff2') format('woff2');
+}
+
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 500;
+	src: local('RobotoMono Medium'), url('fonts/robotomono-medium.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 500;
+	src: local('RobotoMono MediumItalic'), url('fonts/robotomono-medium-italic.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 600;
+	src: local('RobotoMono SemiBold'), url('fonts/robotomono-semi-bold.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 600;
+	src: local('RobotoMono SemiBoldItalic'), url('fonts/robotomono-semi-bold-italic.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 700;
+	src: local('RobotoMono Bold'), url('fonts/robotomono-bold.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 700;
+	src: local('RobotoMono BoldItalic'), url('fonts/robotomono-bold-italic.woff2') format('woff2');
+}
+
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: normal;
+	font-weight: 900;
+	src: local('RobotoMono Black'), url('fonts/robotomono-black.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Roboto Mono';
+	font-style: italic;
+	font-weight: 900;
+	src: local('RobotoMono BlackItalic'), url('fonts/robotomono-black-italic.woff2') format('woff2');
+}
+
+
 html {
 	font-family: Roboto, sans-serif;
 }
