--- a/css/base.css
+++ b/css/base.css
@@ -92,26 +92,27 @@ table{
 ::-webkit-scrollbar{
 	height: 8px;
 	width: 8px;
-	background: color-mix(in srgb, var(--background-color) 94.5%, var(--text-color));
+	background: color-mix(in srgb, var(--background-color) 96%, var(--text-color));
 }
 
 ::-webkit-scrollbar-thumb{
-	background: color-mix(in srgb, var(--background-color) 75.7%, var(--text-color));
-
-	&:hover{
-		background: color-mix(in srgb, var(--background-color) 65.9%, var(--text-color));
-	}
-
-	&:active{
-		background: color-mix(in srgb, var(--background-color) 47%, var(--text-color));
-	}
+	background: color-mix(in srgb, var(--background-color) 80%, var(--text-color));
 }
+
+::-webkit-scrollbar-thumb:hover{
+	background: color-mix(in srgb, var(--background-color) 65%, var(--text-color));
+}
+
+::-webkit-scrollbar-thumb:active{
+	background: color-mix(in srgb, var(--background-color) 50%, var(--text-color));
+}
+
 
 @supports not selector(::-webkit-scrollbar) {
 	*{
 		scrollbar-width: thin;
-		scrollbar-color: color-mix(in srgb, var(--background-color) 94.5%, var(--text-color))
-		                 color-mix(in srgb, var(--background-color) 75.7%, var(--text-color));
+		scrollbar-color: color-mix(in srgb, var(--background-color) 96%, var(--text-color))
+		                 color-mix(in srgb, var(--background-color) 80%, var(--text-color));
 	}
 }
 
