--- a/css/font.css
+++ b/css/font.css
@@ -2,14 +2,14 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 100;
-	src: local('Roboto Thin'), url('fonts/roboto-thin.woff2') format('woff2');
+	src: local('Roboto Thin'), url('fonts/roboto/roboto-thin.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Roboto';
 	font-style: italic;
 	font-weight: 100;
-	src: local('Roboto ThinItalic'), url('fonts/roboto-thin-italic.woff2') format('woff2');
+	src: local('Roboto ThinItalic'), url('fonts/roboto/roboto-thin-italic.woff2') format('woff2');
 }
 
 
@@ -17,14 +17,14 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Roboto Light'), url('fonts/roboto-light.woff2') format('woff2');
+	src: local('Roboto Light'), url('fonts/roboto/roboto-light.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Roboto';
 	font-style: italic;
 	font-weight: 300;
-	src: local('Roboto LightItalic'), url('fonts/roboto-light-italic.woff2') format('woff2');
+	src: local('Roboto LightItalic'), url('fonts/roboto/roboto-light-italic.woff2') format('woff2');
 }
 
 
@@ -32,14 +32,14 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Roboto'), local('Roboto Regular'), url('fonts/roboto-regular.woff2') format('woff2');
+	src: local('Roboto'), local('Roboto Regular'), url('fonts/roboto/roboto-regular.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Roboto';
 	font-style: italic;
 	font-weight: 400;
-	src: local('Roboto Italic'), local('Roboto Regular Italic'), url('fonts/roboto-italic.woff2') format('woff2');
+	src: local('Roboto Italic'), local('Roboto Regular Italic'), url('fonts/roboto/roboto-italic.woff2') format('woff2');
 }
 
 
@@ -47,14 +47,14 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 500;
-	src: local('Roboto Medium'), url('fonts/roboto-medium.woff2') format('woff2');
+	src: local('Roboto Medium'), url('fonts/roboto/roboto-medium.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Roboto';
 	font-style: italic;
 	font-weight: 500;
-	src: local('Roboto MediumItalic'), url('fonts/roboto-medium-italic.woff2') format('woff2');
+	src: local('Roboto MediumItalic'), url('fonts/roboto/roboto-medium-italic.woff2') format('woff2');
 }
 
 
@@ -62,14 +62,14 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 700;
-	src: local('Roboto Bold'), url('fonts/roboto-bold.woff2') format('woff2');
+	src: local('Roboto Bold'), url('fonts/roboto/roboto-bold.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Roboto';
 	font-style: italic;
 	font-weight: 700;
-	src: local('Roboto BoldItalic'), url('fonts/roboto-bold-italic.woff2') format('woff2');
+	src: local('Roboto BoldItalic'), url('fonts/roboto/roboto-bold-italic.woff2') format('woff2');
 }
 
 
@@ -77,14 +77,14 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	font-weight: 900;
-	src: local('Roboto Black'), url('fonts/roboto-black.woff2') format('woff2');
+	src: local('Roboto Black'), url('fonts/roboto/roboto-black.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'Roboto';
 	font-style: italic;
 	font-weight: 900;
-	src: local('Roboto BlackItalic'), url('fonts/roboto-black-italic.woff2') format('woff2');
+	src: local('Roboto BlackItalic'), url('fonts/roboto/roboto-black-italic.woff2') format('woff2');
 }
 
 
