--- a/css/base.css
+++ b/css/base.css
@@ -139,15 +139,15 @@ table{
 
 
 .size-small{
-	font-size: 13;
+	font-size: 13px;
 }
 
 .size-medium{
-	font-size: 14;
+	font-size: 14px;
 }
 
 .size-large{
-	font-size: 16;
+	font-size: 16px;
 }
 
 .size-default{
